# openbankingMCP

./: .gitignore  CATEGORIZATION_AND_ARGS_FIXES.md  FINAL_FIXES_SUMMARY.md  INTEGRATION_README.md  INTEGRATION_SUMMARY.md  PACKAGE_RESTRUCTURE_SUMMARY.md  README.md  SETUP.md  TEST_FIXES_SUMMARY.md  mcp.json  minimal_mcp.py  pyproject.toml  repo-snapshot-20250919-1457.md  requirements.txt  server.py  start_servers.py  test.csv  test_integration.py  test_package.py  test_roundtrip.py  test_schema.py  validate.py
.cursor/: mcp.json
.next/: trace
docs/: DPIA-lite.md  retention.md
openbankingmcp/: __init__.py  hmrc.py  pkce.py  schemas.py  server.py  validate.py
scripts/: retention.py
tests/: test_api_accounts.py  test_api_exports.py  test_api_transactions.py  test_export_hmrc_csv.py  test_list_accounts.py  test_list_transactions.py  test_pkce_consent.py  test_retention_enforcer.py
web/: .gitignore  README.md  index.html  package.json  serve.py  tsconfig.json
web/app/: layout.tsx  page.tsx
web/components/: FileDrop.tsx
web/lib/: categorize.ts  hmrc.ts  normalize.ts  schema.ts  types.ts
